feat: Synchronize Stargate Cluster with March 18 Fed Dissent & 17.85% Upside Target